# skip-py

./: LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py
examples/: example.py
src/skip/: __init__.py  skip.py
src/skip_py.egg-info/: PKG-INFO  SOURCES.txt
