[build-system]
requires = ["setuptools>=61.0", "cosmpy>=0.6.0", "httpx>=0.23.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skip-python"
version = "0.1.0"
authors = [
  { name="Skip Protocol", email="jeremy@skip.money" },
]
description = "A helper library to sign and send bundles to the Skip Relay in Python."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/skip-mev/skip-py"